fix: bug dark mode

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
 
 :root {
   /* LIGHT MODE */
@@ -42,14 +43,6 @@
   z-index: 1;
   opacity: 1;
 }
-
-/* .snap-scroll {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100vh;
-    scroll-snap-type: y mandatory;
-} */
 
 p {
   font-family: "Tuffy", sans-serif;
@@ -307,6 +300,7 @@ footer {
   background-size: 1050px 1050px;
   height: 100vh;
   scroll-snap-align: center;
+}
 
 .about-me-title {
   font-family: "Cherry Bomb", sans-serif;
